...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edtAge"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="Age"
            android:inputType="number" />

        <EditText
...
